# hubspot-lakehouse

./: README.md  docker-compose.yml  env.example  pyproject.toml
config/duckdb/: duckdb.conf
config/unity-catalog/: server.properties.example  unity-catalog.yaml
dbt/: .user.yml  dbt_project.yml  dev.db  packages.yml  profiles.yml
dbt/macros/: init-az.sql  read_azure_json.sql
dbt/models/: sources.yml
dbt/models/bronze/: bronze_hubspot_communications.sql  bronze_hubspot_companies.sql  bronze_hubspot_contacts.sql  bronze_hubspot_deals.sql  bronze_hubspot_engagements.sql  bronze_hubspot_users.sql
dbt/models/gold/: gold_communications_summary.sql
dbt/models/raw/: ext_hubspot_communications.sql  raw_hubspot_communications.sql  raw_hubspot_companies.sql  raw_hubspot_contacts.sql  raw_hubspot_deals.sql  raw_hubspot_engagements.sql  raw_hubspot_users.sql
dbt/models/silver/: silver_hubspot_communications.sql
dbt/models/staging/: stg_hubspot_communications.sql
examples/: duckdb-python-example.py  duckdb-queries.sql
scripts/: connect-duckdb.sh  init-duckdb.sql  setup-lakehouse.sh  setup-minio-azure-ilm.sh  setup.sh  sync-azure-to-minio-initial.sh  sync-azure-to-minio.sh  test-minio-azure-gateway.sh
